[package]
name = "sigma-proof-compiler-derive"
version = "0.1.0"
authors = ["ZKSecurity <hello@zksecurity.xyz>"]
repository = "https://github.com/zksecurity/sigma-proof-compiler"
license = "Apache-2.0"
edition = "2021"
description = "Derive macros for sigma-proof-compiler"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
